fix patrick's comments and misalignments at some view in home page

--- a/src/components/YellowButton/styles.scss
+++ b/src/components/YellowButton/styles.scss
@@ -33,8 +33,12 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 10px;
     margin-top: 1.6em;
+    @include breakpoint(mobile) {
+      margin-top: 1.8em;
+      gap: 0px;
+      column-gap: 10px;
+    }
 
     @include breakpoint(tablet-up) {
       flex-direction: column;
@@ -43,7 +47,7 @@
   &__product-page-img {
     margin-bottom: 20px;
     @include breakpoint(mobile) {
-      width: 20%;
+      width: 50px;
       margin-right: 0.4em;
     }
   }
