--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -68,12 +68,14 @@ a.navbar-item.active-item {
   display: flex;
   flex-direction: column;
   height: 100%;
-  @include breakpoint(mobile) {
-    width: fit-content;
-  }
-  @include breakpoint(tablet-up) {
-    min-width: 100%;
-  }
+  // width: 100%;
+  // min-width: 470px;
+  // @include breakpoint(mobile) {
+  //   width: fit-content;
+  // }
+  // @include breakpoint(tablet-up) {
+  //   min-width: 100%;
+  // }
 
   &__content {
     flex: 1 0 auto;
